# ffmpeg_demo

./: .gitignore  CMakeLists.txt  README.md  ffmpeg_demo.sln
1.simple/: CMakeLists.txt
1.simple/src/: main.cpp  pch.h  window.cpp  window.h
1.simple/src/res/: fshader.glsl  vshader.glsl
2.decode_use/: CMakeLists.txt
2.decode_use/src/: main.cpp  pch.cpp
2.decode_use/src/res/: res.qrc
Debug/: ffmpeg_demo.ilk
cmake/: AddPCH.cmake  FileUtils.cmake  MUIModule.cmake
ffmpeg_demo/: Resource.h  ffmpeg_demo.cpp  ffmpeg_demo.rc  ffmpeg_demo.vcxproj  ffmpeg_demo.vcxproj.filters
ffmpeg_demo/Debug/: ffmpeg_demo.res  vc141.idb
ffmpeg_demo/Debug/ffmpeg_demo.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  ffmpeg_demo.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  rc.command.1.tlog  rc.read.1.tlog  rc.write.1.tlog
ffmpeg_demo/ffmpeg/include/libavutil/: ffversion.h
ffmpeg_demo/ffmpeg/lib/: avcodec.lib  avdevice.lib  avfilter.lib  avformat-58.def  avformat.lib  avutil-56.def  avutil.lib  desktop.ini  postproc.lib  swresample.lib  swscale.lib
ffmpeg_demo/ffmpeg/lib/pkgconfig/: libavcodec.pc  libavdevice.pc  libavfilter.pc  libavformat.pc  libavutil.pc  libpostproc.pc  libswresample.pc  libswscale.pc
ffmpeg_demo/sdl2/lib/: SDL2.lib  SDL2main.lib
